Enhancements and Fixes for a Seamless User Experience: Resolving Tooltip Overlapping, Font-weight Conflict, and Markdown Heading Consistency (#169)
* Ensure uniformity across the website by changing the markdown heading from h2 to h3.

* Fix the Bootstrap conflict with heading font-weight by utilizing the 'important' keyword

* Fix overlapping tooltip text issue in the Community Partners section by adjusting the z-index

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -27,7 +27,7 @@ a,
 span {
   font-family: "Instrument Sans", sans-serif !important;
   color: #000;
-  font-weight: 400;
+  font-weight: 400!important;
 }
 
 body,
@@ -286,7 +286,7 @@ button a {
   padding: 4px 8px;
   border-radius: 4px;
   white-space: nowrap;
-  z-index: 1;
+  z-index: 9999;
 }
 
 .date-text {
